--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title>DiscoFun</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="DiscoFun, the best discord panel for developers." />
-	<meta name="author" content="OverjoyedToast">
-	<meta name="author:username" content="OverjoyedToast" />
+	<meta name="author" content="ToastBox">
+	<meta name="author:username" content="ToastBox" />
 	<meta property="og:site_name" content="DiscoFun" />
 	<meta property="og:url" content="index.html" />
 	<meta property="og:type" content="website" />
@@ -358,7 +358,7 @@
 										<div class="card-body">
 											<div>
 												<div class="py-3">
-													<h5 class="font-size-13 mb-0"><a href="https://github.com/OverjoyedToast/DiscoFun"
+													<h5 class="font-size-13 mb-0"><a href="https://github.com/toastbox1000/DiscoFun"
 															target="_blank" class="text-body d-block">GitHub</a></h5>
 												</div>
 												<div class="py-3 border-top">
@@ -366,12 +366,12 @@
 															class="text-body d-block">Website</a></h5>
 												</div>
 												<div class="py-3 border-top">
-													<h5 class="font-size-13 mb-0"><a href="https://overjoyedtoast.gitbook.io/DiscoFun"
+													<h5 class="font-size-13 mb-0"><a href="https://ToastBox.gitbook.io/DiscoFun"
 															target="_blank" class="text-body d-block">Documentation</a></h5>
 												</div>
 												<div class="py-3 border-top">
 													<h5 class="font-size-13 mb-0"><a
-															href="https://github.com/OverjoyedToast/DiscoFun/blob/master/LICENSE"
+															href="https://github.com/toastbox1000/DiscoFun/blob/master/LICENSE"
 															target="_blank" class="text-body d-block">License</a></h5>
 												</div>
 											</div>
