--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
 	<title>Login - DiscoFun</title>
 	<link rel="stylesheet" href="./assets/css/login.css">
 	<meta name="description" content="DiscoFun, the best discord panel for developers." />
-	<meta name="author" content="OverjoyedToast">
-	<meta name="author:username" content="OverjoyedToast" />
+	<meta name="author" content="ToastBox">
+	<meta name="author:username" content="ToastBox" />
 	<meta property="og:site_name" content="DiscoFun" />
 	<meta property="og:url" content="index.html" />
 	<meta property="og:type" content="website" />
